--- a/adaptatif_delire/index.html
+++ b/adaptatif_delire/index.html
@@ -33,13 +33,13 @@ Page: index.html
         </ul>
     </nav>
     <header>
-        <img src="_images/logo.png" alt="logo" class="groupeh">
+        <img src="/_images/logo.png" alt="logo" class="groupeh">
         <h1  class="groupeh">I-N-V-A-S-I-O-N</h1>
         <h2 class="groupeh">... cat ipsum!</h2>
     </header>
     <main class="vedette">
         <article>
-            <img src="_images/intro.jpg"  alt="chatIntro" class="principale">
+            <img src="/_images/intro.jpg"  alt="chatIntro" class="principale">
             <img class="introCache" src="_images/intro2.jpg"  alt="chatIntro2">
             <p> Cat ipsum dolor sit amet, sun bathe, and brown cats with pink ears so hate dog. Eat all the power cords. Cat not kitten around curl into a furry donut so purr while eating for chew on cable instead of drinking water from the cat bowl, make sure to steal water from the toilet stick butt in face. More napping, more napping all the napping is exhausting give attitude, step on your keyboard while you're gaming and then turn in a circle yet roll on the floor purring your whiskers off the fat cat sat on the mat bat away with paws for sleep <span class="action"><a href="http://www.catipsum.com/" title="page lorem ipsum">continuer à lire</a></span></p>
         </article>
