lien image test2

--- a/adaptatif_delire/index.html
+++ b/adaptatif_delire/index.html
@@ -33,7 +33,7 @@ Page: index.html
         </ul>
     </nav>
     <header>
-        <img src="/_images/logo.png" alt="logo" class="groupeh">
+        <img src="https://mjheck.github.io/adaptatif_delire/_images/logo.png" alt="logo" class="groupeh">
         <h1  class="groupeh">I-N-V-A-S-I-O-N</h1>
         <h2 class="groupeh">... cat ipsum!</h2>
     </header>
