--- a/adaptatif_delire/index.html
+++ b/adaptatif_delire/index.html
@@ -39,8 +39,8 @@ Page: index.html
     </header>
     <main class="vedette">
         <article>
-            <img src="/_images/intro.jpg"  alt="chatIntro" class="principale">
-            <img class="introCache" src="_images/intro2.jpg"  alt="chatIntro2">
+            <img src="images/intro.jpg"  alt="chatIntro" class="principale">
+            <img class="introCache" src="images/intro2.jpg"  alt="chatIntro2">
             <p> Cat ipsum dolor sit amet, sun bathe, and brown cats with pink ears so hate dog. Eat all the power cords. Cat not kitten around curl into a furry donut so purr while eating for chew on cable instead of drinking water from the cat bowl, make sure to steal water from the toilet stick butt in face. More napping, more napping all the napping is exhausting give attitude, step on your keyboard while you're gaming and then turn in a circle yet roll on the floor purring your whiskers off the fat cat sat on the mat bat away with paws for sleep <span class="action"><a href="http://www.catipsum.com/" title="page lorem ipsum">continuer à lire</a></span></p>
         </article>
         <aside> 
@@ -57,21 +57,21 @@ Page: index.html
     <section class="spotlight">
         <article class="recent">
             <h2>Box cat</h2>
-            <div class="img-wrap"><img src="_images/cat1.jpg"  alt="Box cat"></div>
+            <div class="img-wrap"><img src="images/cat1.jpg"  alt="Box cat"></div>
             <h3>Cat Ipsum</h3>
             <p>Meow all night eat the fat cats food so chase mice, stare at guinea pigs and adventure always or swat at dog. Dont wait for the storm to pass, dance in the rain adventure always so nap all day purr.</p>
             <p class="call"><a href="http://www.catipsum.com/" title="page lorem ipsum" class="button">Cat Ipsum</a></p>
         </article>
         <article class="recent">
             <h2>Sandwich cat</h2>
-            <div class="img-wrap"><img src="_images/cat2.jpg"  alt="Sandwich cat"></div>
+            <div class="img-wrap"><img src="images/cat2.jpg"  alt="Sandwich cat"></div>
             <h3>Cat Ipsum</h3>
             <p>Meow all night eat the fat cats food so chase mice, stare at guinea pigs and adventure always or swat at dog. Dont wait for the storm to pass, dance in the rain adventure always so nap all day purr.</p>
             <p class="call"><a href="http://www.catipsum.com/" title="page lorem ipsum" class="button">Cat Ipsum</a></p>
         </article>
         <article class="recent">
             <h2>Fire cat</h2>
-            <div class="img-wrap"><img src="_images/cat3.jpg"  alt="Fire cat"></div>
+            <div class="img-wrap"><img src="images/cat3.jpg"  alt="Fire cat"></div>
             <h3>Cat Ipsum</h3>
             <p>Meow all night eat the fat cats food so chase mice, stare at guinea pigs and adventure always or swat at dog. Dont wait for the storm to pass, dance in the rain adventure always so nap all day purr.</p>
             <p class="call"><a href="http://www.catipsum.com/" title="page lorem ipsum" class="button">Cat Ipsum</a></p>
@@ -79,11 +79,11 @@ Page: index.html
     </section>
     <footer>
         <ul>
-            <li><img src="_images/tw.png"></li>
-            <li><img src="_images/fb.png"></li>
-            <li><img src="_images/yt.png"></li>
-            <li><img src="_images/gp.png"></li>
-            <li><img src="_images/be.png"></li>
+            <li><img src="images/tw.png"></li>
+            <li><img src="images/fb.png"></li>
+            <li><img src="images/yt.png"></li>
+            <li><img src="images/gp.png"></li>
+            <li><img src="images/be.png"></li>
         </ul>
         <p>&copy; 2017</p>
     </footer>
