--- a/adaptatif_delire/index.html
+++ b/adaptatif_delire/index.html
@@ -13,6 +13,7 @@ Page: index.html
     <meta name="author" content="mjheck">
 	<link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
+	<link rel="icon" href="images/fav-logo.png"/>
     <title>I-N-V-A-S-I-O-N</title>
 </head>
 <body>
