--- a/animation_bonne-fete/index.html
+++ b/animation_bonne-fete/index.html
@@ -894,6 +894,26 @@ function playSound(id, loop) {
 </script>
 <!-- write your code here -->
 </head>
+<style>
+body{
+   position: fixed;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+   background-color:black;
+}
+#animation_container{
+    position: absolute;
+    top: 50%;
+    left: 50%; 
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%); 
+    -ms-transform: translate(-50%, -50%); 
+    -o-transform: translate(-50%, -50%); 
+    transform: translate(-50%, -50%); 
+}
+</style>
 <body onload="init();" style="margin:0px;">
 	<div id="animation_container" style="background-color:rgba(255, 255, 255, 1.00); width:550px; height:400px">
 		<canvas id="canvas" width="550" height="400" style="position: absolute; display: block; background-color:rgba(255, 255, 255, 1.00);"></canvas>
