--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="mjheck">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"> 
 	<link rel="stylesheet" href="style.css">
     <title>Marie-Josée Heck</title>
 </head>
 <body>
-	Hello World
+<div class="conteneur">
+	<header>
+		<h1>Marie-Josée Heck</h1>
+		<h2>Développeuse Web</h2>
+	</header>
+	<main>
+		<table>
+			<tr>
+				<td>Page web statique adaptative. Le but de l'exercice était de créer une page adaptative à partir de Flexbox. La thématique était libre. Le manque de contrainte peut parfois mener au délire...</td>
+				<td><a href="https://mjheck.github.io/adaptatif_delire/" target="_blank">Invasion</a></td>
+			</tr>
+			<tr>
+				<td>L'objectif de ce projet était d'élaborer l'image de marque d'une entreprise fictive (logo, slogan, etc.) et créer trois pages statiques représentatives de son site web, adaptées pour les desktops, tablettes et mobiles.</td>
+				<td><a href="https://mjheck.github.io/adaptatif_galerie-cubique/" target="_blank">Galerie Cubique</a></td>
+			</tr>
+			<tr>
+				<td>Création d'une carte d'anniversaire animé intégrant du son.</td>
+				<td><a href="https://mjheck.github.io/animation_bonne-fete/" target="_blank">Joyeux anniversaire</a></td>
+			</tr>
+			<tr>
+				<td>Jeu de puzzle réalisé en Javascript et CSS</td>
+				<td><a href="https://mjheck.github.io/jeu-tuiles/" target="_blank">Jouer!</a></td>
+			</tr>
+		</table>
+	</main>
+</div>
 </body>
 </html>
