--- a/jeu-tuiles/index.html
+++ b/jeu-tuiles/index.html
@@ -7,7 +7,7 @@ Date : 13 juin 2018
 -->
 <html lang="fr">
 	<head>
-		<title>TP1 - Exercice 2</title>
+		<title>Résous le puzzle</title>
 		<meta charset="UTF-8" />
 		<link href="https://fonts.googleapis.com/css?family=Faster+One|Paytone+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
