--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<main>
 		<table>
 			<tr>
-				<td>Page web statique adaptative. Le but de l'exercice était de créer une page adaptative à partir de Flexbox. La thématique était libre. Le manque de contrainte peut parfois mener au délire...</td>
+				<td>Le but de l'exercice était de créer une page adaptative en utilisant Flexbox. La thématique était libre. Le manque de contrainte peut parfois mener au délire...</td>
 				<td><a href="https://mjheck.github.io/adaptatif_delire/" target="_blank">Invasion</a></td>
 			</tr>
 			<tr>
@@ -31,6 +31,10 @@
 			<tr>
 				<td>Jeu de puzzle réalisé en Javascript et CSS</td>
 				<td><a href="https://mjheck.github.io/jeu-tuiles/" target="_blank">Jouer!</a></td>
+			</tr>
+			<tr>
+				<td>Création d'un thème complet pour le CMS Opencart, destiné au e-commerce. Le thème devait être personnalisé pour un commerce de notre choix et respecter la maquette fournie</td>
+				<td><a href="https://mjheck.github.io/img/sofa-crown_accueil.jpg/">Accueil</a></td>
 			</tr>
 		</table>
 	</main>
