--- a/index.html
+++ b/index.html
@@ -30,11 +30,15 @@
 			</tr>
 			<tr>
 				<td>Jeu de puzzle réalisé en Javascript et CSS</td>
-				<td><a href="https://mjheck.github.io/jeu-tuiles/" target="_blank">Jouer!</a></td>
+				<td><a href="jeu-tuiles/index.html/" target="_blank">Jouer!</a></td>
 			</tr>
 			<tr>
-				<td>Création d'un thème complet pour le CMS Opencart, destiné au e-commerce. Le thème devait être personnalisé pour un commerce de notre choix et respecter la maquette fournie</td>
-				<td><a href="https://mjheck.github.io/img/sofa-crown_accueil.jpg/">Accueil</a></td>
+				<td>Création d'un thème complet pour le CMS Opencart, destiné au e-commerce. Le thème devait respecter la maquette fournie et être adapté au commerce de notre choix</td>
+				<td><ul>
+					<li><a href="img/sofa-crown_accueil.jpg/" target="_blank">Sofa Crown - Accueil</a></li>
+					<li><a href="img/sofa-crown_article.jpg/" target="_blank">Sofa Crown - Produit</a></li>
+					</ul>
+				</td>
 			</tr>
 		</table>
 	</main>
