changement liens absolus

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 		<table>
 			<tr>
 				<td>Le but de l'exercice était de créer une page adaptative en utilisant Flexbox. La thématique était libre. Le manque de contrainte peut parfois mener au délire...</td>
-				<td><a href="https://mjheck.github.io/adaptatif_delire/" target="_blank">Invasion</a></td>
+				<td><a href="adaptatif_delire/index.html" target="_blank">Invasion</a></td>
 			</tr>
 			<tr>
 				<td>L'objectif de ce projet était d'élaborer l'image de marque d'une entreprise fictive (logo, slogan, etc.) et créer trois pages statiques représentatives de son site web, adaptées pour les desktops, tablettes et mobiles.</td>
-				<td><a href="https://mjheck.github.io/adaptatif_galerie-cubique/" target="_blank">Galerie Cubique</a></td>
+				<td><a href="adaptatif_galerie-cubique/index.html" target="_blank">Galerie Cubique</a></td>
 			</tr>
 			<tr>
 				<td>Création d'une carte d'anniversaire animé intégrant du son.</td>
-				<td><a href="https://mjheck.github.io/animation_bonne-fete/" target="_blank">Joyeux anniversaire</a></td>
+				<td><a href="animation_bonne-fete/index.html" target="_blank">Joyeux anniversaire</a></td>
 			</tr>
 			<tr>
 				<td>Jeu de puzzle réalisé en Javascript et CSS</td>
-				<td><a href="jeu-tuiles/index.html/" target="_blank">Jouer!</a></td>
+				<td><a href="jeu-tuiles/index.html" target="_blank">Jouer!</a></td>
 			</tr>
 			<tr>
 				<td>Création d'un thème complet pour le CMS Opencart, destiné au e-commerce. Le thème devait respecter la maquette fournie et être adapté au commerce de notre choix</td>
