changement liens absolus 2

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 			<tr>
 				<td>Création d'un thème complet pour le CMS Opencart, destiné au e-commerce. Le thème devait respecter la maquette fournie et être adapté au commerce de notre choix</td>
 				<td><ul>
-					<li><a href="img/sofa-crown_accueil.jpg/" target="_blank">Sofa Crown - Accueil</a></li>
-					<li><a href="img/sofa-crown_article.jpg/" target="_blank">Sofa Crown - Produit</a></li>
+					<li><a href="images/sofa-crown_accueil.jpg/" target="_blank">Sofa Crown - Accueil</a></li>
+					<li><a href="images/sofa-crown_article.jpg/" target="_blank">Sofa Crown - Produit</a></li>
 					</ul>
 				</td>
 			</tr>
