--- a/jeu-tuiles/index.html
+++ b/jeu-tuiles/index.html
@@ -9,6 +9,7 @@ Date : 13 juin 2018
 	<head>
 		<title>Résous le puzzle</title>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Faster+One|Paytone+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
 		<link href="css/style2.css" rel="stylesheet" />
