--- a/animation_bonne-fete/index.html
+++ b/animation_bonne-fete/index.html
@@ -11,6 +11,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="authoring-tool" content="Adobe_Animate_CC">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>TP2_cartePostale_MJHeck</title>
 <!-- write your code here -->
 <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
