--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="author" content="mjheck">
 	<link rel="icon" type="image/png" href="images/programming-code-signs.png" />
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/responsive.css">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700,800,900" rel="stylesheet"> 
@@ -21,7 +22,6 @@
 	<nav>
 		<ul>
 			<li><a class="social" href="https://www.linkedin.com/in/marie-jos%C3%A9e-heck-148b0094/"><img src="images/linkedin.png" width="28px"/></a></li>
-			<li><a href="#presentation">Présentation</a></li>
 			<li><a href="#competences">Compétences</a></li>
 			<li><a href="#realisations">Réalisations</a></li>
 		</ul>
@@ -38,6 +38,7 @@
 
 	<main>
 		<section id="presentation" class="conteneur">
+			<h3>Bonjour!</h3>
 			<blockquote>
 				<p>J'ai débuté mon parcours professionnel dans le domaine de la sociologie et de l'histoire. Mon désir d’apprendre et de comprendre le monde m'a par la suite dirigée vers la programmation et le développement Web.</p>
 				<p>La programmation web est rapidement devenue une passion pour moi. Elle me permet de mettre à profit mon esprit cartésien et mes besoins créatifs.</p>
@@ -52,25 +53,25 @@
 		
 		<section id="competences" class="conteneur">
 			<h3>Compétences</h3>
-			<div class="conteneur-flex">
+			<div class="conteneur-flex conteneur-tab">
 				<div class="wrapper-tab">
 					<table>
 						<thead><tr><th colspan="2">Langages</th></tr></thead>
 						<tbody>
 							<tr>
-								<td>CSS</td>
+								<td class="matiere">CSS</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-un" data-pourcentage="80"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>HTML</td>
+								<td class="matiere">HTML</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-un" data-pourcentage="90"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>Javascript</td>
+								<td class="matiere">Javascript</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-un " data-pourcentage="80"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>PHP / mySQL</td>
+								<td class="matiere">PHP / mySQL</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-un" data-pourcentage="95"></div><span></span></div></td>
 							</tr>
 						</tbody>
@@ -81,19 +82,19 @@
 						<thead><tr><th colspan="2">CMS et Frameworks</th></tr></thead>
 						<tbody>
 							<tr>
-								<td>Bootstrap</td>
+								<td class="matiere">Bootstrap</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-deux" data-pourcentage="60"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>JQuery</td>
+								<td class="matiere">JQuery</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-deux" data-pourcentage="75"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>Opencart</td>
+								<td class="matiere">Opencart</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-deux" data-pourcentage="80"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>Wordpress</td>
+								<td class="matiere">Wordpress</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-deux" data-pourcentage="65"></div><span></span></div></td>
 							</tr>
 						</tbody>
@@ -104,11 +105,11 @@
 						<thead><tr><th colspan="2">Logiciels</th></tr></thead>
 						<tbody>
 							<tr>
-								<td>Illustrator</td>
+								<td class="matiere">Illustrator</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-trois" data-pourcentage="30"></div><span></span></div></td>
 							</tr>
 							<tr>
-								<td>Photoshop</td>
+								<td class="matiere">Photoshop</td>
 								<td><div class="barre-ext"><div class="barre-int barre-tab-trois" data-pourcentage="50"></div><span></span></div></td>
 							</tr>
 						</tbody>
@@ -116,7 +117,6 @@
 				</div>
 			</div>
 			<div class="conteneur-flex">
-				<div class="wrapper-boite">
 				<div class="boite">
 					<div><img src="images/chat.png"/></div>
 					<ul>
@@ -124,8 +124,6 @@
 						<li>Anglais : Intermédiaire</li>
 					</ul>
 				</div>
-				</div>
-				<div class="wrapper-boite">
 					<div class="boite">
 						<div><img src="images/idea4.png"/></div>
 						<ul>
@@ -133,8 +131,6 @@
 							<li>Communication</li>
 						</ul>
 					</div>
-				</div>
-				<div class="wrapper-boite">
 					<div class="boite">
 						<div><img src="images/tools3.png"/></div>
 						<ul>
@@ -142,7 +138,6 @@
 							<li>Méthodologie Agile</li>
 						</ul>
 					</div>
-				</div>
 			</div>
 		</section>
 		<div class="parallax-window" data-parallax="scroll" data-image-src="images/gars-cell.jpg"></div>
@@ -154,9 +149,11 @@
 				</div>
 			</div>
 		</section>
-		<div class="parallax-window" data-parallax="scroll" data-image-src="images/robot2.jpg">
-			<div class="btn-contact"><a href="mailto:mariejoheck@gmail.com">Me contacter</a></div>
-		</div>
+		<section id="contact">
+			<div class="parallax-window" data-parallax="scroll" data-image-src="images/robot2.jpg">
+				<div class="btn-contact"><a href="mailto:mariejoheck@gmail.com">Me contacter</a></div>
+			</div>
+		</section>
 	</main>
 	<footer>
 		<span class="symbole">&lt;</span> copyright 2019 - Marie-Josée Heck  <span class="symbole">&sol;&gt;</span>
