--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 			</div>
 		</section>
 		<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="images/gars-cell.jpg"></div> -->
-		<div class="fond-fixe" style="background-image: url('images/realisations2.jpg');">
+		<div class="fond-fixe" style="background-image: url('images/robot2.jpg');">
 			<div class="titre-fond desktop">Réalisations</div>
 			<div class="titre-fond mobile"><p>Réa</p><p>lis</p><p>ati</p><p>ons</p></div>
 		</div>
