--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400,400i,500,600,700,800,900" rel="stylesheet"> 
-	<script src="https://unpkg.com/scrollreveal@4"></script>
+	<script src="https://unpkg.com/scrollreveal"></script>
+
 	<script src="js/jquery-3.3.1.min.js"></script>
 	<script src="js/parallax.min.js"></script>
 	<script type="text/javascript" src="js/script.js"></script>
@@ -46,8 +47,11 @@
 				<p>La programmation web est rapidement devenue une passion pour moi. Elle me permet de mettre à profit mon esprit cartésien et mes besoins créatifs.</p>
 				<p>L'innovation, l'autonomie, la confiance et l'entraide occupent une place prépondérante au sein de mon travail. Davantage douée en programmmation, j'aime aussi mettre en pratique les aptitudes que j’ai acquises en sociologie pour le développement d'interfaces conviviales respectant les principes du design UX/UI.</p>
 			</blockquote>
+			<div class="bounce">
+				<a href="images/cv_mjheck.pdf" download><img src="images/download-fleche.png" width="35px"/></a>
+			</div>
 			<div>
-				<a href="images/cv_mjheck.pdf" download><img src="images/download-cv.png" width="60px"/></a>
+				<a href="images/cv_mjheck.pdf" download><img src="images/download-bac.png" width="60px"/></a>
 			</div>
 		</section>
 		
@@ -167,5 +171,6 @@
 	<footer>
 		copyright 2019 - Marie-Josée Heck
 	</footer>
+	<script></script>
 </body>
 </html>
