--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<header>
 		<!-- <div class="parallax-window" data-parallax="scroll" data-image-src="images/caracteres7.jpg"> -->
-		<div class="fond-fixe" style="background-image: url('images/caracteres7.jpg');">
+		<div class="fond-fixe">
 			<div class="titre">
 				<h1 class="ml16">Marie-Josée Heck</h1>
 				<h2 class="ml16">Développeuse Web</h2>
@@ -171,6 +171,5 @@
 	<footer>
 		copyright 2019 - Marie-Josée Heck
 	</footer>
-	<script></script>
 </body>
 </html>
